# Project_Movies

./: .gitignore  config.py  databese.py  dependencies.py  main.py  pyproject.toml
models/: Movies.py
pydantic_model/: MoviePydantices.py
routers/: Movies.py
src/: main.py
src/app/movie/: main.py
src/app/movie/application/services/: movie_command_service.py  movie_query_service.py
src/app/movie/domain/: entities.py
src/app/movie/infrastructure/: database.py
src/app/movie/infrastructure/repositories/: repositories.py
src/app/movie/interface/api/: movie_router.py
src/app/movie/models/: dtos.py
src/app/movie/schemas/: movie_schema.py
src/controllers/: movi_router.py
src/db/: database.py  dependencies.py
src/models/: movie_model.py
src/repositories/: movie_repository.py
src/schemas/: movie_schema.py
src/services/: movie_service.py
