[tool.poetry]
name = "project-movies"
version = "0.1.0"
description = "A simple Movie API using Clean Architecture & FastAPI."
authors = [
    {name = "Mahnaz Hazeri", email = "hazerimahnaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0" # بر اساس فایل شما تنظیم شده

[tool.poetry.dependencies]
python = ">=3.11,<4.0"


archipy = {version = "^0.8.0", extras = ["fastapi", "sqlalchemy"]} 


uvicorn = "^0.29.0" 

[tool.poetry.group.dev.dependencies]

pytest = "^8.1.1" 


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"